--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2>RAMEN</h2>
-        <input type="text" id="name" placeholder="WHO AM I GIVING THIS TO?">
+        <input type="text" id="name" placeholder="NAME">
         <input type="text" id="flavor" placeholder="BEEF OR CHICKEN">
         <input type="text" id="egg" placeholder="EGG OR NO EGG">
         <hr>
