--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <h2>RAMEN</h2>
-        <input type="text" id="name" placeholder="NAME">
-        <input type="text" id="flavor" placeholder="BEEF OR CHICKEN">
-        <input type="text" id="egg" placeholder="EGG OR NO EGG">
+        <input type="text" class="name" id="name" placeholder="NAME">
+        <input type="text" class="flavor" id="flavor" placeholder="BEEF OR CHICKEN">
+        <input type="text" class="flavor" id="egg" placeholder="EGG OR NO EGG">
         <hr>
         <button onclick="message()">REQUEST</button>
         <script src="script.js"></script>
